k8s/library/library-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-service
  namespace: library
spec:
  selector:
    app: library
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library
  namespace: library
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library
  template:
    metadata:
      labels:
        app: library
    spec:
      containers:
        - name: library
          image: b0nam/library:main
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config-volume
              mountPath: /app/BOOT-INF/classes/application.yml
              subPath: application.yml
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
      volumes:
        - name: config-volume
          configMap:
            name: library-config
