k8s/library/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  namespace: library
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - library.bonam.cc
      secretName: library-tls
  rules:
    - host: library.bonam.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library-service
                port:
                  number: 8000
